@@ -1,3 +1,10 @@
+2013-02-09: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* SQLiteAdaptor.m
+	  fix compilation with clang
+	* PlaylistsManagerController.[h|m]
+	* CollectionController.[h|m]
+	  (unsigned) int -> NS(U)Integer transitions
+
 2012-01-06: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* MPDController.[h|m], CollectionBrowser.[h|m], 
 	  Resources/CollectionBrowser.gorm, AppController.m,
